catalytic_table_to_struct/example/src/non_compiling_code/non_existing_column.stderr
error: proc macro panicked
 --> src/non_compiling_code/non_existing_column.rs:6:5
  |
6 |     query!("select * from test_table where b = ? and c = 2 and f = 2", a);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Illegal column: f
